third_party/WebKit/LayoutTests/http/tests/security/document-all-expected.txt
CONSOLE ERROR: line 1: Uncaught TypeError: Illegal constructor

